--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["ESNext"],
-    "jsx": "preserve",
+    "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "allowJs": true,
     "checkJs": true,
-    "declaration": true,
-    "declarationDir": "build",
     "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
