--- a/packages/jsx-editor/package.json
+++ b/packages/jsx-editor/package.json
@@ -14,7 +14,12 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/standalone": "^7.17.2",
+    "@babel/template": "^7.16.7",
+    "@babel/traverse": "^7.17.0",
+    "@babel/types": "^7.17.0"
+  },
   "peerDependencies": {
     "antd": "^4.18.6",
     "react": "^17.0.2",
@@ -29,7 +34,9 @@
     "@storybook/addon-links": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/babel__standalone": "^7.1.4",
     "@types/react": "^17.0.39",
+    "antd": "^4.18.6",
     "babel-loader": "^8.2.3",
     "jest": "^27.5.1",
     "postcss": "^8.4.6",
