--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
   "scripts": {
     "start": "yarn workspace app dev",
     "build": "yarn workspaces run build",
-    "lint": "echo lint",
+    "lint": "eslint . --ext ",
     "test": "jest"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^26.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.4.7",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "prettier-eslint": "^13.0.0"
   }
 }
