--- a/packages/jsx-editor/package.json
+++ b/packages/jsx-editor/package.json
@@ -15,10 +15,13 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/standalone": "^7.17.2",
     "@babel/template": "^7.16.7",
     "@babel/traverse": "^7.17.0",
-    "@babel/types": "^7.17.0"
+    "@babel/types": "^7.17.0",
+    "nanoid": "^3.2.0",
+    "prettier": "^2.5.1"
   },
   "peerDependencies": {
     "antd": "^4.18.6",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
@@ -34,6 +38,7 @@
     "@storybook/addon-links": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/babel__helper-plugin-utils": "^7.10.0",
     "@types/babel__standalone": "^7.1.4",
     "@types/react": "^17.0.39",
     "antd": "^4.18.6",
