--- a/ui-editor/core/package.json
+++ b/ui-editor/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsx-editor",
+  "name": "@jsx-editor/core",
   "version": "0.0.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -10,49 +10,28 @@
     "clear": "rimraf dist types",
     "dev": "rollup -cw",
     "build": "yarn clear && tsc && rollup -c",
-    "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/helper-plugin-utils": "^7.16.7",
-    "@babel/plugin-syntax-jsx": "^7.16.7",
-    "@babel/plugin-transform-react-jsx": "7.10.3",
     "@babel/standalone": "^7.17.2",
-    "@babel/template": "^7.16.7",
-    "@babel/traverse": "^7.17.0",
-    "@babel/types": "^7.17.0",
     "nanoid": "^3.2.0",
     "prettier": "^2.5.1"
   },
   "peerDependencies": {
-    "antd": "^4.18.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/react": "^6.4.19",
-    "@storybook/testing-library": "^0.0.9",
     "@types/babel__helper-plugin-utils": "^7.10.0",
     "@types/babel__standalone": "^7.1.4",
     "@types/react": "^17.0.39",
-    "antd": "^4.18.6",
-    "babel-loader": "^8.2.3",
     "jest": "^27.5.1",
-    "postcss": "^8.4.6",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^4.5.5"
   }
 }
