feat: 添加 Editor

--- a/ui-editor/core/package.json
+++ b/ui-editor/core/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@babel/helper-plugin-utils": "^7.16.7",
     "@babel/standalone": "^7.17.2",
+    "immer": "^9.0.12",
     "nanoid": "^3.2.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "ramda": "^0.28.0"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -28,6 +30,7 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/babel__helper-plugin-utils": "^7.10.0",
     "@types/babel__standalone": "^7.1.4",
+    "@types/ramda": "^0.28.1",
     "@types/react": "^17.0.39",
     "jest": "^27.5.1",
     "rimraf": "^3.0.2",
