--- a/ui-editor/core/tsconfig.json
+++ b/ui-editor/core/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "declarationDir": "types"
   },
   "include": ["src"]
