--- a/ui-editor/core/package.json
+++ b/ui-editor/core/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "clear": "rimraf dist types",
     "dev": "rollup -cw",
-    "build": "yarn clear && tsc && rollup -c",
+    "build": "yarn clear && rollup -c",
     "test": "jest"
   },
   "dependencies": {
@@ -17,8 +17,7 @@
     "@babel/standalone": "^7.17.2",
     "immer": "^9.0.12",
     "nanoid": "^3.2.0",
-    "prettier": "^2.5.1",
-    "ramda": "^0.28.0"
+    "prettier": "^2.5.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -35,6 +34,6 @@
     "jest": "^27.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   }
 }
