--- a/ui-editor/core/tsconfig.json
+++ b/ui-editor/core/tsconfig.json
@@ -5,7 +5,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "declarationDir": "types"
+    "declarationDir": "."
   },
   "include": ["src"]
 }
