chore: 添加 react 包

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.9.0",
@@ -26,6 +27,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
-    "prettier-eslint": "^13.0.0"
+    "prettier-eslint": "^13.0.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0"
   }
 }
