--- a/ui-editor/react/tsconfig.json
+++ b/ui-editor/react/tsconfig.json
@@ -5,8 +5,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "declarationDir": ".",
-    "allowJs": true
+    "declarationDir": "."
   },
-  "include": ["src", "tests"],
+  "include": ["src"]
 }
