--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "private": true,
   "description": "My graduation project",
   "author": "Grapedge <grapedge@gmail.com>",
-  "workspaces": [
-    "app/",
-    "api-driven/*",
-    "ui-editor/*",
-    "sw-esm-pack/*"
-  ],
   "scripts": {
     "start": "yarn workspace app dev",
     "build": "yarn workspaces run build",
@@ -26,6 +20,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.4.7",
+    "lerna": "^4.0.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "ts-jest": "^27.1.4",
