feat: 完成 Editor.create 方法

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
     "emitDeclarationOnly": false,
     "allowJs": true,
     "checkJs": false,
+    "noImplicitAny": false,
     "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
