--- a/ui-editor/react/package.json
+++ b/ui-editor/react/package.json
@@ -30,6 +30,7 @@
     "jest": "^27.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.2"
   }
 }
