--- a/ui-editor/react/package.json
+++ b/ui-editor/react/package.json
@@ -13,7 +13,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "immer": "^9.0.12"
+    "@jsx-editor/core": "^0.0.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "antd": "^4.19.3",
+    "immer": "^9.0.12",
+    "ramda": "^0.28.0"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -28,6 +32,7 @@
     "@types/ramda": "^0.28.1",
     "@types/react": "^17.0.39",
     "jest": "^27.5.1",
+    "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
     "ts-jest": "^27.1.4",
