--- a/ui-editor/core/tsconfig.json
+++ b/ui-editor/core/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+    "baseUrl": ".",
+    "declaration": true,
     "declarationDir": ".",
     "allowJs": true
   },
-  "include": ["src", "tests"],
+  "include": ["src/**/*", "tests/**/*"]
 }
