--- a/ui-editor/antd/package.json
+++ b/ui-editor/antd/package.json
@@ -29,6 +29,7 @@
     "@types/ramda": "^0.28.1",
     "@types/react": "^17.0.39",
     "jest": "^27.5.1",
+    "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
     "ts-jest": "^27.1.4",
