--- a/ui-editor/core/package.json
+++ b/ui-editor/core/package.json
@@ -2,8 +2,6 @@
   "name": "@jsx-editor/core",
   "version": "0.0.0",
   "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "types/index.d.ts",
   "author": "Grapedge <grapedge@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -35,8 +33,10 @@
     "@types/ramda": "^0.28.5",
     "@types/react": "^17.0.39",
     "jest": "^27.5.1",
+    "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
+    "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.2"
   }
