--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@jsx-editor/core": "^0.0.0",
+    "@jsx-editor/react": "^0.0.0",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "react": "^17.0.2",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "prettier": "^2.6.1",
     "ts-jest": "^27.1.4",
     "vite": "^2.8.0"
   }
