--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,15 @@
     "@jsx-editor/react": "^0.0.0",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "antd": "^4.19.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@vitejs/plugin-react": "^1.0.7",
     "prettier": "^2.6.1",
     "ts-jest": "^27.1.4",
