--- a/ui-editor/antd/package.json
+++ b/ui-editor/antd/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@jsx-editor/core": "^0.0.0",
     "antd": "^4.19.3",
     "immer": "^9.0.12"
   },
@@ -22,7 +23,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/babel__helper-plugin-utils": "^7.10.0",
     "@types/babel__standalone": "^7.1.4",
