--- a/ui-editor/core/package.json
+++ b/ui-editor/core/package.json
@@ -2,6 +2,7 @@
   "name": "@jsx-editor/core",
   "version": "0.0.0",
   "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "author": "Grapedge <grapedge@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -25,7 +26,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/babel__helper-plugin-utils": "^7.10.0",
     "@types/babel__standalone": "^7.1.4",
@@ -33,7 +38,6 @@
     "@types/ramda": "^0.28.5",
     "@types/react": "^17.0.39",
     "jest": "^27.5.1",
-    "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
     "rollup-plugin-typescript2": "^0.31.2",
